29 June 2009(svn.debian.org/tux4kids - previous revisions to 1116)
[ Sarah Frisk <ssfrisk@gmail.com>]
		- Custom Word Lists Configuration Program (titlescreen.c):
		- Cleaned up the previous wordlist configure functions to make code more readable/fix
		  previous bug errors.
		- Fixed issue where the wordlist reads the first word in the list as
		  title name.  Need to get rid of the the .txt bit at the end, but 
		  currently reads everything correctly. NOTE: the current wordlist editor is
		  reading the first word in the wordlist as the name of the list.
		- Lets the user choose a custom wordlist in the choose wordlist menu before
		  playing a game.
		- Fixed the backspace button in wordlist editor to prevent bus errors
		- Return key now recognizes a new word.  Still a few bugs in this though, since
		  random characters are getting passed into the new word occasionally.

08 Jun 2009 (svn.debian.org/tux4kids - revision 1017)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Scripting - fix of bug in scripting.c run_script() where font size left
          at zero.

06 Jun 2009 (svn.debian.org/tux4kids - revision 1013)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Paths - added support for localstatedir (shared modifiable data, generally
          located under /var) and sysconfdir (program-wide settings, generally located
          under /etc) to autotools build system.  Also updated the game_option_type struct
          to have a field for the shared modifiable data - var_data_path.  This is the
          intended location for shared custom word lists, high scores, and so forth.

23 Mar 2009 (svn.debian.org/tux4kids - revision 945)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Code organization - TransWipe() and all of the blitting queue functions
          moved from playgame.c into SDL_extras.c/.h. Some safety checks and other
          cleanup added along the way.

03 Mar 2009 (svn.debian.org/tux4kids - revision 932)
Version 1.7.4